@@ -50,9 +50,6 @@ class FL_EXPORT Fl_Group : public Fl_Widget {
 protected:
   enum { CLIP_CHILDREN = 2048 };
 
-  void clip_children(int c) { if (c) set_flag(CLIP_CHILDREN); else clear_flag(CLIP_CHILDREN); }
-  int clip_children() { return (flags() & CLIP_CHILDREN) != 0; }
-
   void draw();
   void draw_child(Fl_Widget&) const;
   void draw_children();
@@ -91,7 +88,10 @@ public:
   void add_resizable(Fl_Widget& o) {resizable_ = &o; add(o);}
   void init_sizes();
 
-  // back compatability function:
+  void clip_children(int c) { if (c) set_flag(CLIP_CHILDREN); else clear_flag(CLIP_CHILDREN); }
+  int clip_children() { return (flags() & CLIP_CHILDREN) != 0; }
+
+  // back compatibility functions:
   void focus(Fl_Widget* o) {o->take_focus();}
   Fl_Widget* & _ddfdesign_kludge() {return resizable_;}
   void forms_end();
